<resources>
    <string name="app_name">theBhangarwale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>
    <string name="title_update_item">Update Item</string>
    <string name="title_address">Address</string>
    <string name="title_requests">Requests</string>
    <string name="sub_title_address">Save and update your address</string>
    <string name="sub_title_requests">Check your request status</string>
    <string name="tag_id">tag_id</string>
    <string name="title_add_address">Add Address</string>
    <string name="title_select_devlivery_location">Select delivery location</string>
    <string name="title_create_address">Create Address</string>
    <string name="title_bhangar_request">Bhangar Request</string>
    <string name="title_select_address">Select Address</string>
    <string name="title_cancel_request">Cancel Request</string>
    <string name="note_warning">Note : Avoid cancellation if the driver is reaching you. or give call to the driver for avoiding our travel.</string>
    <string name="title_profile">Profile</string>
    <string name="title_name">Name</string>
    <string name="title_phone">Phone</string>
    <string name="tag_profileDetails">tag_profileDetails</string>
    <string name="string_call_us"> call us</string>
    <string name="string_phone_number_title">Verify your number</string>
    <string name="string_phone_number_subtitle">Your contact number requires for using bhangarwale app</string>
    <string name="string_country_code">Country code</string>
    <string name="string_country_code_india">India (+91)</string>
    <string name="string_your_phone_number">Your phone number</string>
    <string name="string_phone_number_note">The Bhangarwale will send you a one-off SMS message. Operator rate may apply.</string>
    <string name="string_continue">Continue</string>
    <string name="string_verification_code">Verification code</string>
    <string name="string_verification_code_subtitle">Please type in the verification code\nsent to +91 8806616913</string>
    <string name="string_verification_code_not_receive">Didn\'t receive a code?\nPlease wait</string>
    <string name="title_account">Account</string>
    <string name="sub_title_account">Address,Requests</string>
    <string name="title_settings">Settings</string>
    <string name="sub_title_settings">Notification,Display</string>
    <string name="title_help">Help</string>
    <string name="sub_title_help">Contact us,Email us</string>
    <string name="string_notification">Notification</string>
    <string name="string_display">Display</string>
    <string name="string_theme">Theme</string>
    <string name="string_language">Language</string>
    <string name="title_contact_us">Contact us</string>
    <string name="sub_title_contact_us">Tap will redirected to dial pad</string>
    <string name="title_email_us">Email us</string>
    <string name="sub_title_email_us">Tap will redirected to mail</string>
    <string name="string_whats_new">What\'s New</string>
    <string name="title_support">Support</string>
    <string name="sub_title_settings_display">Display</string>
    <string name="string_service_for_nagpur_only">Our services available for Nagpur only</string>
    <string name="string_title_my_location">My Location</string>
    <string name="string_land_mark">LandMark</string>
    <string name="string_submit">Submit</string>
    <string name="string_title_enable">Enable</string>
    <string name="string_title_select_and_proceed"><![CDATA[Select &amp; Proceed]]></string>
    <string name="string_item">Item</string>
    <string name="string_quantity">Quantity (Kg)</string>
    <string name="string_attachements">Image or Video (Maximum 3)</string>
    <string name="string_raise_request">Raise Request</string>
    <string name="string_no_question_ask_cancellation">No question asked cancellation</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_later">Later</string>
    <string name="string_save">SAVE</string>
    <string name="string_search_in_bhangar">Search a Bhangar</string>
    <string name="string_transition_search">search</string>
    <string name="string_phone_number_already_used">Your bhangarwale account currently uses +91 8806616913</string>
    <string name="string_pincode">Pincode</string>
    <string name="string_feed">Feed</string>
    <string name="string_create_request">Create Request</string>
    <string name="string_my_acount">My Account</string>
    <string name="string_share">Share</string>
    <string name="title_location_service">Use location service?</string>
    <string name="content_location_service">To send a nearby place or your location, allow Bhangarwale access to your location.</string>
    <string name="string_not_now">NOT NOW</string>
    <string name="string_location_denied">Location service is denied</string>
    <string name="string_create_address">Create</string>
    <string name="string_system_settings">Settings</string>
    <string name="string_manage_address">Manage Address</string>
    <string name="string_manage_address_description">Create address by yourself or Enable location from system settings.</string>
    <string name="title_systen_settings">System Settings</string>
    <string name="error_enter_valid_phone_number">Enter valid phone number.</string>
    <string name="string_tap_and_hold_info">Tap and hold on a item for more options</string>
    <string name="tag_image_uri">tag_image_uri</string>
    <string name="title_delete">Delete</string>
    <string name="tag_item">tag_item</string>
    <string name="tag_position">tag_position</string>
    <string name="error_enter_valid_otp">Enter valid otp.</string>
    <string name="title_edit">Edit directly</string>
    <string name="title_google_map">Edit with Google Maps</string>
    <string name="title_edit_address">Edit Address</string>
    <string name="tag_address">tag_address</string>
    <string name="string_recent_search">Recent Search</string>
    <string name="title_profile_photo">Profile Photo</string>
    <string name="title_close">Close</string>
    <string name="number_regex">0123456789</string>
    <string name="error_please_check_internet_connection">Please check your internet connection</string>
    <string name="error_something_went_wrong">Something went wrong</string>

</resources>