<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/string_display"
        app:iconSpaceReserved="false">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/string_theme"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/string_language"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>