<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textViewVerifyYourNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/string_phone_number_title"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_phone_number_header"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageviewSupport"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="12dp"
        android:src="@drawable/ic_help"
        app:layout_constraintLeft_toRightOf="@id/textViewVerifyYourNumberLabel"
        app:layout_constraintTop_toTopOf="@id/textViewVerifyYourNumberLabel" />

    <TextView
        android:id="@+id/textViewContactNumberRequireLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/string_phone_number_subtitle"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_phone_number_sub_header"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewVerifyYourNumberLabel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCountryCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:hint="@string/string_country_code"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintTop_toBottomOf="@id/textViewContactNumberRequireLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCountryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="phone"
            android:textSize="20sp"
            android:textColor="@color/color_bhangarwale"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="30dp"
        android:hint="@string/string_your_phone_number"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCountryCode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20sp"
            android:maxLength="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSmsNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:text="@string/string_phone_number_note"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhoneNumber"
        android:textColor="@color/color_phone_number_note"/>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_arrow"
        app:iconGravity="end"
        app:iconTint="@android:color/white"
        android:textColor="@android:color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/string_continue"
        android:gravity="right|center_vertical"
        app:cornerRadius="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>