<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start|left|top"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_name"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCancel"
        style="?attr/buttonBarNegativeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_cancel"
        android:textStyle="bold"
        android:textColor="@color/color_bhangarwale"
        app:layout_constraintTop_toTopOf="@id/buttonSave"
        app:layout_constraintRight_toLeftOf="@id/buttonSave"/>

    <Button
        android:id="@+id/buttonSave"
        style="?attr/buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhoneNumber"
        android:text="@string/string_save"
        android:textStyle="bold"
        android:textColor="@color/color_bhangarwale"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>