<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/label_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Enter the new number"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_phone_number_header"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--android:fontFamily="@font/jet_brains_mono_regular"-->

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="12dp"
        android:src="@drawable/ic_help"
        app:layout_constraintLeft_toRightOf="@id/label_one"
        app:layout_constraintTop_toTopOf="@id/label_one" />

    <TextView
        android:id="@+id/label_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/string_phone_number_already_used"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_phone_number_sub_header"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_one" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/string_country_code_india"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintTop_toBottomOf="@id/label_two">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCountryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="phone"
            android:text="@string/string_country_code_india"
            android:textSize="20sp"
            android:textColor="@color/color_bhangarwale"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="30dp"
        android:hint="@string/string_your_phone_number"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintTop_toBottomOf="@id/filledTextFieldOne">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="20sp"
            android:maxLength="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:text="@string/string_phone_number_note"
        android:textSize="15sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filledTextFieldTwo" />

    <!-- android:fontFamily="@font/jet_brains_mono_regular"-->

    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon="@drawable/ic_arrow"
        app:iconGravity="end"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/string_continue"
        android:gravity="right|center_vertical"
        app:cornerRadius="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>