<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_nature"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinebottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/jet_brains_mono_regular"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/string_no_question_ask_cancellation"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_cancel_title"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineUp" />

    <TextView
        android:id="@+id/textview_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="8dp"
        android:text="@string/note_warning"
        android:textColor="@color/color_cancel_sub_title"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/textview_title" />

    <Button
        android:id="@+id/button_later"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginRight="16dp"
        android:elevation="0dp"
        android:text="@string/string_later"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelinebottom"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/button_cancel"
        app:strokeColor="@color/color_bhangarwale" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:text="@string/string_cancel"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelinebottom"
        app:layout_constraintLeft_toRightOf="@id/button_later"
        app:layout_constraintRight_toRightOf="@id/guidelineRight" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close" />

</androidx.constraintlayout.widget.ConstraintLayout>