<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutHeader"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/drawable_toolbar_elevation"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleTextV2" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/button_submit"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="24dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textViewAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="#ff00"
                android:layout_marginLeft="2dp"
                android:text="@string/string_service_for_nagpur_only" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextFieldItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_title_my_location"
                app:layout_constraintTop_toBottomOf="@id/textViewAlert"
                android:layout_marginTop="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextMyLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textSize="16sp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:text="4D, Harish Arjun Palay Marg, New Patra Chawl, Dhaku Prabhuchi Wadi, Byculla East, Byculla, Mumbai, Maharashtra 400033, India"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextFieldTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/string_land_mark"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:layout_constraintTop_toBottomOf="@id/filledTextFieldItem">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="4D, Harish Arjun Palay"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/filledTextFieldTwo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="28dp"
                app:counterEnabled="true"
                app:counterMaxLength="6">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_pincode"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:inputType="number"
                    android:digits="01234567890"
                    android:text="400033"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/string_submit"
        android:textAllCaps="false"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nv" />

</androidx.constraintlayout.widget.ConstraintLayout>













