<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/label_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/string_verification_code"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_otp_header"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageviewSupport"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="12dp"
        android:src="@drawable/ic_help"
        app:layout_constraintLeft_toRightOf="@id/label_one"
        app:layout_constraintTop_toTopOf="@id/label_one" />

    <TextView
        android:id="@+id/label_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/string_verification_code_subtitle"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_otp_sub_header"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_one" />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:inputType="number"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_bhangarwale"
        app:itemCount="6"
        app:itemSpacing="16dp"
        app:itemWidth="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_two"
        app:viewType="line"
        android:theme="@style/OtpViewTheme"/>

    <TextView
        android:id="@+id/label_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/string_verification_code_not_receive"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color_otp_content"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_view" />

</androidx.constraintlayout.widget.ConstraintLayout>